feat: 新增 banner api
